package _3_行为型模式._1_模版方法模式_Template_Method._1_数据库读取设置;

public interface Source {
    String read(String key);
}
